docs: finish products routes docs
